--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -33,3 +33,50 @@
         color: #fff;
     }
 }
+.createNote{
+    form{
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        margin-top: 3rem;
+        .inputs{
+            box-shadow: 0px 0px 10px 0px #2d34363b;
+            width: 300px;
+            input{
+                font-size: 2rem;
+                border: none;
+                outline: none;
+                width: 300px;
+                padding: 1rem;
+            }
+            textarea{
+                font-size: 2rem;
+                outline: none;
+                border: none;
+                width: 300px;
+                height: 100px;
+                padding: 1rem;
+                &::placeholder{
+                    font-size: 1.5rem;
+                }
+            }
+        }
+        button{
+            width: 50px;
+            height: 50px;
+            position: absolute;
+            left: 840px;
+            top: 210px;
+            border-radius: 100%;
+            border: none;
+            outline: none;
+            box-shadow: 0px 0px 5px 0px #2d34368f;
+            background-color: #fff;
+            .add{
+                color: #2d3436;
+                font-size: 3rem;
+
+            }
+        }
+    }
+}
