--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -80,3 +80,46 @@
         }
     }
 }
+.notes{
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    margin-top: 4rem;
+    .note{
+        box-shadow: 0px 0px 10px 0px #2d34363b;
+        width: 250px;
+        height: 150px;
+        margin-bottom: 4rem;
+        // overflow-y: auto;
+        position: relative;
+        .content{
+            h2{
+                font-size: 2rem;
+                padding: 1rem;
+                color: #2d3436;
+            }
+            p{
+                font-size: 2rem;
+                padding: 1rem;
+                color: #2d3436;
+            }
+        }
+        button{
+            box-shadow: 0px 0px 5px 0px #2d34368f;
+            position: absolute;
+            top: 125px;
+            left: 230px;
+            width: 40px;
+            height: 40px;
+            border-radius: 50%;
+            border: none;
+            outline: none;
+            background-color: #fff;
+            // z-index: 5;
+            .delete{
+                font-size: 2.5rem;
+                color: #2d3436;
+            }
+        }
+    }
+}
