--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -21,7 +21,6 @@
 .footer{
     background-color: #2d3436;
     justify-content: center;
-    margin-bottom: auto;
     width: 100%;
     position: fixed;
     left: 0;
@@ -85,6 +84,7 @@
     justify-content: space-around;
     flex-wrap: wrap;
     margin-top: 4rem;
+    margin-bottom: 5rem;
     .note{
         box-shadow: 0px 0px 10px 0px #2d34363b;
         width: 250px;
@@ -99,7 +99,7 @@
                 color: #2d3436;
             }
             p{
-                font-size: 2rem;
+                font-size: 1.5rem;
                 padding: 1rem;
                 color: #2d3436;
             }
@@ -115,7 +115,6 @@
             border: none;
             outline: none;
             background-color: #fff;
-            // z-index: 5;
             .delete{
                 font-size: 2.5rem;
                 color: #2d3436;
