--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -71,10 +71,13 @@
             outline: none;
             box-shadow: 0px 0px 5px 0px #2d34368f;
             background-color: #fff;
+            &:active{
+                background-color: hsl(0, 0%, 95%);
+                
+            }
             .add{
                 color: #2d3436;
                 font-size: 3rem;
-
             }
         }
     }
@@ -114,6 +117,10 @@
             border: none;
             outline: none;
             background-color: #fff;
+            transition: ease-in-out;
+            &:active{
+                background-color: hsl(0, 0%, 95%);
+            }
             .delete{
                 font-size: 2.5rem;
                 color: #2d3436;
