--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -34,10 +34,14 @@
 }
 .createNote{
     form{
+        .totalForm{
+            position: relative;
+        }
         display: flex;
         align-items: center;
         flex-direction: column;
         margin-top: 3rem;
+        position: relative;
         .inputs{
             box-shadow: 0px 0px 10px 0px #2d34363b;
             width: 300px;
@@ -64,8 +68,8 @@
             width: 50px;
             height: 50px;
             position: absolute;
-            left: 840px;
-            top: 210px;
+            left: 275px;
+            top: 120px;
             border-radius: 100%;
             border: none;
             outline: none;
@@ -73,7 +77,6 @@
             background-color: #fff;
             &:active{
                 background-color: hsl(0, 0%, 95%);
-                
             }
             .add{
                 color: #2d3436;
