--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,3 +1,4 @@
+//?############################################## CSS RESET ##################################################
 *,*::after,*::before{
     margin: 0;
     padding: 0;
@@ -8,6 +9,8 @@
     -moz-osx-font-smoothing: grayscale;
     font-family: 'Roboto', sans-serif;
 }
+//?############################################## HEADER STYLING ##################################################
+
 .header{
     background-color: #2d3436;
     display: flex;
@@ -18,6 +21,8 @@
         color: #fff;
     }
 }
+//?############################################## FOOTER STYLING ##################################################
+
 .footer{
     background-color: #2d3436;
     justify-content: center;
@@ -32,6 +37,8 @@
         color: #fff;
     }
 }
+//?############################################## CREATE NOTE STYLING ##################################################
+
 .createNote{
     form{
         .totalForm{
@@ -85,6 +92,8 @@
         }
     }
 }
+//?############################################## NOTES STYLING ##################################################
+
 .notes{
     display: flex;
     justify-content: space-around;
